# APEX_Orchestration_Engine

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  langgraph.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml  codeql.yml  deploy-aks.yaml  release.yaml
apps/dashboard/: .env.example  Dockerfile  Dockerfile.dockerignore  PARITY.md  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
deploy/bootstrap/: compose.json  example.json
deploy/compose-ha/: README.md  docker-compose.ha.yaml  nginx.conf
deploy/minio-gateway/: nginx.conf
deploy/terraform/: .gitignore  README.md  acr.tf  aks.tf  backend.tf  identity.tf  keyvault.tf  main.tf  monitoring.tf  network.tf  outputs.tf  postgres.tf  providers.tf  redis.tf  storage.tf  variables.tf  versions.tf
docs/: rbac-remediation-plan.md
docs/adr/: 0001-langgraph-server-runtime.md  0002-ports-and-adapters.md  0003-auth-model.md  0004-graph-topology.md  0005-deployment-topology.md  0006-dashboard-architecture.md  0007-azure-aks-deployment.md
docs/api/: apex-v1.openapi.json
docs/runbooks/: aks-deployment.md  deployment.md  incident.md  operations.md
scripts/: apply_terraform_plan.py  bootstrap.py  cleanup_csi_hook_material.py  deploy.py  dev.py  docker_repo_digest.py  export_openapi.py  generate_sdks.sh  immutable_plan_snapshot.py  m1_smoke.py  m2_smoke.py  release_version.py  seal_terraform_plan.py  seed_catalog.py  seed_dev.py  seed_prompts.py  terraform_plan_policy.py  tool_versions.py  validate_langgraph_recipe.py
src/apex/: __init__.py  settings.py
tests/: conftest.py
tests/conformance/: __init__.py  harnesses.py  test_engine_conformance.py
tests/integration/: test_bootstrap_apply.py  test_prompt_version_concurrency.py  test_restart_survival.py
tests/unit/: authz_matrix_data.py  conftest.py  test_adapter_options.py  test_adapters_connections.py  test_adapters_registry.py  test_adapters_stubs.py  test_ado_adapter.py  test_agent_analytics_db.py  test_agent_analytics_repository.py  test_agent_analytics_router.py  test_analytics_scope.py  test_apex_load_adapter.py  test_app_dependencies.py  test_app_errors.py  test_artifact_references.py  test_artifacts_router.py  test_audit_edges.py  test_audit_service.py  test_auth_handlers.py  test_auth_identity.py  test_auth_router.py  test_auth_service.py  test_authz_matrix.py  test_bootstrap.py  test_bootstrap_runner_paths.py  test_catalog_db.py  test_catalog_repository_paths.py  test_catalog_router.py  test_compliance_router.py  test_configurable.py  test_connections_db.py  test_connections_resolver.py  test_connections_router.py  test_consumers_repository.py  test_consumers_repository_db.py  test_context_graph.py  (+90 more)
(+556 files in other folders)
