[project]
name = "apex-orchestration-engine"
version = "0.1.0"
description = "APEX Orchestration Engine — LangGraph-driven agentic performance-test pipeline platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=1.0",
    "fastapi>=0.115",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.2",
    "langgraph-sdk>=0.1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
